# epoll-executor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
application/unit_tests/: CMakeLists.txt  event_engine_tests.cpp  event_handle_tests.cpp  fake_service.cpp  fake_service.h  notification_tests.cpp  print_to.cpp  print_to.h  safe_tests.cpp
src/: CMakeLists.txt  activation.h  epoll_context.h  epoll_service.cpp  epoll_service.h  event_engine.cpp  event_engine.h  event_engine.hpp  event_handle.cpp  event_handle.h  event_service.cpp  event_service.h  handle.h  mode.h  notification.cpp  notification.h  signal_handle.h  signal_manager.cpp  signal_manager.h  unique_handle.h
src/bits/: exceptions.h
